[project]
name = "gaps"
version = "0.1.1"
description = "Genetic Algorithm based solver for jigsaw puzzles with piece size auto-detection."
authors = [{ name = "Nemanja Milicevic", email = "the.nemanja.milicevic@gmail.com" }]
requires-python = "~=3.8"
readme = "README.md"
license = "MIT"
dependencies = [
    "pillow>=10.2.0,<11",
    "numpy==1.24",
    "matplotlib>=3.7.2,<4",
    "opencv-python>=4.8.0.74,<5",
    "click>=8.1.6,<9",
]

[project.urls]
Homepage = "https://github.com/nemanja-m/gaps"
Repository = "https://github.com/nemanja-m/gaps"

[project.scripts]
gaps = "gaps.cli:cli"

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8",
    "ruff>=0.0.282,<0.0.283",
    "black>=24.3.0,<25",
    "mypy>=1.4.1,<2",
    "pylint>=2.17.5,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-ra -v --disable-warnings"
